--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,9 +26,9 @@ jobs:
     - name: Build docker image 
       run: |
         docker build -t jaime28/docker-graphql:0.0.2 .
+        docker build -t jaime28/docker-graphql .
     - name: Push docker image
       run: |
         docker push jaime28/docker-graphql:0.0.2
+        docker push jaime28/docker-graphql:0.0.2
         
-#    - name: Build the Docker image
-#      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
