--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,5 +30,5 @@ jobs:
     - name: Push docker image
       run: |
         docker push jaime28/docker-graphql:0.0.2
-        docker push jaime28/docker-graphql:0.0.2
+        docker push jaime28/docker-graphql
         
