--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,16 +29,18 @@ jobs:
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        NEW_VERSION: ${{ steps.version.outputs.version }}
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        echo "-----------------------New version: $NEW_VERSION --------------------------"
-#    - name: Build docker image 
- #     run: |
-  #      docker build -t jaime28/docker-graphql:0.0.2 .
-   #     docker build -t jaime28/docker-graphql .
-    #- name: Push docker image
-     # run: |
-      #  docker push jaime28/docker-graphql:0.0.2
-       # docker push jaime28/docker-graphql
+    - name: Build docker image 
+      env: 
+          NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker build -t jaime28/docker-graphql:$NEW_VERSION .
+        docker build -t jaime28/docker-graphql .
+    - name: Push docker image
+      env: 
+          NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker push jaime28/docker-graphql:$NEW_VERSION
+        docker push jaime28/docker-graphql
         
